# regulations-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  worker.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 17a1cea4a79a_add_regulation_runs.py  3437c65e4e5e_add_audit_logs.py  3850f57a6da7_add_async_fields_to_regulation_runs.py  4ce9c79037ba_add_regulation_runs.py  854dee9d166e_add_regulations_run.py  d537d00a87b0_create_users.py
frontend/: package-lock.json
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/runs/[id]/: page.tsx
frontend/src/app/runs/new/: page.tsx
frontend/src/components/: AuthGuard.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/lib/components/: AppHeader.tsx
src/app/: main.py
src/app/api/: errors.py  health.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: auth.py  db_health.py  health.py  runs.py  users.py
src/app/core/: config.py  deps.py  errors.py  logging.py  security.py
src/app/db/: base.py  session.py
src/app/logic/: classifiers.py  engine.py  requirement_cards.py  rules.py  types.py
src/app/middleware/: request_id.py  request_logging.py
src/app/models/: __init__.py  audit_log.py  regulation_run.py  user.py
src/app/models/schemas/: auth.py  runs.py  users.py
src/app/services/: audit_service.py  jobs.py  queue.py  run_service.py  user_service.py
tests/: db_ping.py  test_db.py  test_health.py  test_logic_engine.py
